# randomstuff

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  bun.lockb  data.csv  docker-compose.yml  fixed-transactions.csv  garbage.ipynb  happy_path.py  is_prime.py  location.py  main.py  multiplication_table.py  my_transactions.py  nfl_teams.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  semaphores.py  setup.py  some_stuff.py  tipping.py  tsconfig.json  turbo.json
apache-beam/: main.py
challenges/: semaphores.py
concurrency/: coroutines.py  global.fixed.py  sites--threading.py
data/: person.csv  transactions.csv
flask/: Dockerfile  app.py  config.py  nginx.conf  requirements.txt
ideas/: running_message.py  tipping.py
kensho/: airlock.py  team.py
lessons/: argv.py  bst.py  classes.py  closures.py  dates.py  decorators.py  filesystem.py  formatting.py  functions.py  lesson-csv.py  lesson-files.py  lesson-files.txt  lesson-pyspark.py  lesson-timedeltas.py  lesson_csv.py  lesson_files.py  lesson_pandas.py  lesson_pyspark.py  loops.py  matplotlib.py  perf_counter.py  person.csv  variables.py  zip.py
misc/: am_i_free.py  cost_per_salary.py  count-reading.py  debug.py  emissions.py  export-todoist.py  fashion_bot.py  fix_santandar_transactions.py  fix_santander_transactions.py  habit-tracker.py  instagram.py  outfits.py  tipping.py  wipe_off_internet.py
models/: person.py  schedule.py
notebooks/: callable.ipynb  garbage.ipynb  memoization.ipynb  pandas-csv.ipynb  recursion.ipynb
(+133 files in other folders)
